# kbd

./: .travis.yml  configure.ac  index.html
src/: Makefile.am  kdfontop.c  kdfontop.h  loadkeys.c  mapscrn.c  psffontop.c  psffontop.h  psfxtable.c  setfont.c  showconsolefont.c  utf8.c  utf8.h
src/libkbdfile/: findfile.c  kbdfile.c  kbdfile.h
src/libkeymap/: dump.c  ksyms.c
src/libkeymap/keymap/: dump.h
src/libkfont/: Makefile.am  TODO  TODO.md  combined.c  error.c  font-combined.c  font-getters.c  font-legacy.c  font-load.c  kfont-dump.c  kfont-render.c  kfont-setfont.c  kfont-test.c  kfont-unimap.c  kfont.c  kfont.h  kfontP.h  legacy.c  load.c  psf.c  screenmap.c  slice.h  unimap.c
src/libkfont/test-data/: generate-fonts.sh  test.sh
src/libkfont/tools/: bmp.h  kfont-font-inspect.c  kfont-font-render-glyphs.c  kfont-setfont.c
tests/: e2e-dumpkeys.at  libkeymap.at
tests/data/dumpkeys-fulltable/: mac-qwerty-layout.inc
